Fix visibility transition timing on scroll to bottom button

--- a/css/base.css
+++ b/css/base.css
@@ -611,15 +611,15 @@ details {
     opacity: 0;
     visibility: hidden;
     transition:
-        opacity 0.1s ease-in-out,
-        visibility 0s 0.1s;
+        opacity 0.15s ease-in-out,
+        visibility 0s 0.15s;
     will-change: opacity, visibility;
 
     &.show {
         opacity: 1;
         visibility: visible;
         transition:
-            opacity 0.1s ease-in-out,
+            opacity 0.15s ease-in-out,
             visibility 0s 0s;
     }
 
